# qwitter

./: README.md
backend/: main.py  models.py  pyproject.toml  requirements.txt
backend/routers/: deps.py  qweets.py  user.py  utils.py
frontend/: package-lock.json  package.json  quasar.config.js
frontend/src/boot/: axios.js
frontend/src/css/: quasar.variables.sass
frontend/src/layouts/: LoginLayout.vue  MainLayout.vue
frontend/src/pages/: Account.vue  Login.vue  Logout.vue  PageAbout.vue  PageHome.vue  Register.vue
frontend/src/router/: routes.js
frontend/src/stores/: auth.js
